# monkey-wrench

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml  pytest.ini
.github/workflows/: codeql-analysis.yaml  testing.yaml
docs/: Makefile  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_static/: style.css
docs/source/static/: chimp_models.rst  installation.rst  introduction.rst  tasks.rst  use_mode.rst
envs/: chimp.yaml
examples/: README.md
examples/chimp_retrieval/: script.py  task.yaml
examples/fetch_files/: fetch_customized_files.py  script.py  task.yaml
examples/fetch_files/custom/: script.py
examples/fetch_files/seviri/: script.py  task.yaml
examples/fetch_product_ids/: script.py  task.yaml
examples/verify_resampled_files/: script.py  task.yaml
monkey_wrench/: __init__.py
monkey_wrench/chimp/: __init__.py  _models.py  _patch.py
monkey_wrench/cli/: __init__.py  _args.py  _common.py  _models.py
monkey_wrench/date_time/: __init__.py  _batch.py  _common.py  _models.py  _parser.py  _types.py
monkey_wrench/date_time/models/: __init__.py  _base.py  _datetime_range.py  _datetime_range_in_batches.py
monkey_wrench/error/: __init__.py  _common.py
monkey_wrench/generic/: __init__.py  _common.py  _models.py  _types.py
monkey_wrench/generic/models/: __init__.py  _function.py  _pattern.py
monkey_wrench/geometry/: __init__.py  _models.py
monkey_wrench/input_output/: __init__.py  _common.py  _models.py  _types.py
monkey_wrench/input_output/fci/: __init__.py  _common.py
monkey_wrench/input_output/hrit/: __init__.py  _models.py
monkey_wrench/input_output/seviri/: __init__.py  _common.py  _extension.py  _models.py  _resampler.py  _types.py
monkey_wrench/process/: __init__.py  _process.py
monkey_wrench/query/: __init__.py  _api.py  _base.py  _common.py  _list.py  _types.py
monkey_wrench/task/: __init__.py  base.py  chimp.py  common.py  files.py  ids.py
src/monkey_wrench/: __init__.py
src/monkey_wrench/cli/: _args.py
src/monkey_wrench/date_time/: __init__.py  _batch.py  _common.py
src/tests/: conftest.py  requirements.txt
tests/: conftest.py
tests/cli/: test_args.py  test_common.py  test_models.py
tests/date_time/: const.py  test_batch.py  test_common.py  test_models.py  test_parser.py  test_types.py
tests/generic/: test_common.py  test_function.py  test_pattern.py  test_types.py
tests/geometry/: test_models.py
tests/input_output/: test_common.py  test_models.py  test_types.py
tests/query/: test_api.py  test_common.py  test_list.py  test_types.py
tests/task/: const.py  test_base_models.py  test_product_files.py  test_product_ids.py
tests/utils/: __init__.py  _common.py  eumdac.py
(+90 files in other folders)
